--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//src/main/java/Controller/HomeStaffController.java=UTF-8
 encoding//src/main/java/Controller/LoginGoogleController.java=UTF-8
 encoding//src/main/java/Controller/UpdateBaiVietController.java=UTF-8
 encoding//src/main/java/accessfacebook/common/Constans.java=UTF-8
+encoding//src/main/java/controllerManager/SearchAccByAjax.java=UTF-8
+encoding//src/main/webapp/views/Manager/AddStaff.jsp=UTF-8
 encoding//src/main/webapp/views/Manager/EditInfoStaff.jsp=UTF-8
 encoding//src/main/webapp/views/Manager/HomeManager.jsp=UTF-8
 encoding//src/main/webapp/views/Manager/SideBarManager.jsp=UTF-8
