--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,7 +5,9 @@ encoding//src/main/java/Controller/UpdateBaiVietController.java=UTF-8
 encoding//src/main/java/accessfacebook/common/Constans.java=UTF-8
 encoding//src/main/webapp/views/Manager/EditInfoStaff.jsp=UTF-8
 encoding//src/main/webapp/views/Manager/HomeManager.jsp=UTF-8
+encoding//src/main/webapp/views/Manager/QuanLyBan.jsp=UTF-8
 encoding//src/main/webapp/views/Manager/SideBarManager.jsp=UTF-8
+encoding//src/main/webapp/views/Manager/UpdateBan.jsp=UTF-8
 encoding//src/main/webapp/views/Manager/css/thongkebandat.css=UTF-8
 encoding//src/main/webapp/views/Staff/DetailConfirmBan.jsp=UTF-8
 encoding//src/main/webapp/views/Staff/EditBanDaConfirm.jsp=UTF-8
